# bayegani

./: .gitignore  README.md  pyproject.toml
examples/: sample_descriptor.yml
src/bayegani/: __main__.py  cli.py
src/bayegani/core/: event.py
src/bayegani/descriptor_loader/: __init__.py  descriptor_loader.py  file_loader.py
src/bayegani/event_sink/: __init__.py  base.py  mongo_sink.py
src/bayegani/event_source/: __init__.py  base.py  rabbitmq_source.py
src/bayegani/worker/: __init__.py  base.py  local_worker.py
